# Python_Web_HW13

./: README.md  pyproject.toml
src/: schemas.py
src/database/: db.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
