[tool.poetry]
name = "py-web-hw13-1"
version = "0.1.0"
description = ""
authors = ["Maksym Melnyk <maks.melnyk.94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
fastapi = "^0.110.0"
psycopg2-binary = "^2.9.9"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = {extras = ["email"], version = "^2.6.3"}
python-jose = "^3.3.0"
libgravatar = "^1.0.4"
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cloudinary = "^1.39.0"
fastapi-limiter = "^0.1.6"
redis = "^5.0.2"
fastapi-mail = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
